--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -33,18 +33,21 @@
 
 \pitch{\pptQuote{anonymous-2.png}{Before developers can claim that they are building maintainable systems, there must be some way to \ul{measure} maintainability}{Don Coleman and Dan Ash (Hewlett Packard), Bruce Lowther (Micron Semiconductor), \ul{Paul Oman} (University of Idaho), \textit{Using Metrics to Evaluate Software System Maintainability}, 1994}}
 
-\pitch{\pptQuote{paper-1.png}{The factors of software that determine or influence maintainability can be organized into a \ul{hierarchical} structure of measurable attribute. Our hierarchy serves as a taxonomic definition for software maintainability that is compatible with the 35 published works upon which it is based.}{Paul Oman and Jack Hagemeister, \newline \textit{Metrics for Assessing a Software System's Maintainability}, International Conference on Software Maintenance (ICSM), 1992}}
+\qte
+  {paper-1.png}
+  {The factors of software that determine or influence maintainability can be organized into a \ul{hierarchical} structure of measurable attribute. Our hierarchy serves as a taxonomic definition for software maintainability that is compatible with the 35 published works upon which it is based.}
+  {oman1992metrics}
 
 \plush{
 \pptBanner{Software Maintainability Taxonomy}
 \pptPic{.6}{tree.png}\par
-{\scriptsize \textit{Metrics for Assessing a Software System's Maintainability}, Paul Oman and Jack Hagemeister, ICSM, 1992\par}}
+{\scriptsize Source: \bibentry{oman1992metrics}\par}}
 
 \plush{
 \pptBanner{Maintainability Formula}
 \begin{multicols}{2}
 \pptPic{.8}{formula-1.png}\par
-{\scriptsize \textit{Metrics for Assessing a Software System's Maintainability}, Paul Oman and Jack Hagemeister, ICSM, 1992\par}
+{\scriptsize Source: \bibentry{oman1992metrics}\par}
 \par\columnbreak\par
 ``This formula represents the product of the weighted dimensions, where each dimension is measured as the average deviation from a known value of 'goodness' for that maintainability attribute.''
 \end{multicols}
@@ -111,13 +114,6 @@
 
 \pitch{\pptQuote{slr.png}{The SLR outcome provided us with \ul{174 software metrics}, among which we identified a set of 15 most commonly mentioned ones, and 19 metric computation tools available to practitioners.}{\textit{A Tool-Based Perspective on Software Code Maintainability
 Metrics: A Systematic Literature Review}, Luca Ardito et al., Scientific Programming, 2020}}
-
-\plush{
-  \pptBanner{Read this:}\par
-  \textit{Metrics for Assessing a Software System's Maintainability}, Paul Oman and Jack Hagemeister, Proceedings of the International Conference on Software Maintenance (ICSM), 1992\par
-  \textit{Using Metrics to Evaluate Software System Maintainability}, Don Coleman et al., Computer, Volume 18, Issue 8, 1994\par
-  \textit{Exploring Maintainability Index Variants for Software Maintainability Measurement in Object-Oriented Systems}, Tja\u{s}a Heri\u{c}ko and Bo\u{s}tjan \u{S}umak, Applied Sciences, 2023\par
-}
 
 \pitch{\pptBanner{Milestones of Your Research}
 \begin{multicols}{2}
