--- a/18-defect-density/18-defect-density.tex
+++ b/18-defect-density/18-defect-density.tex
@@ -298,7 +298,7 @@
 \qte
   [Xiao Yu]
   {xiao-yu.jpg}
-  {The problem of predicting the precise number of defects via regression algorithms is far from being solved.}
+  {The problem of \ul{predicting} the precise number of defects via regression algorithms is \ul{far} from being solved.}
   {yu2022predicting}
 
 \pitch{\begin{multicols}{2}
