--- a/main.bib
+++ b/main.bib
@@ -391,3 +391,76 @@
   pages={580--586},
   year={2005}
 }
+
+@inproceedings{parnas1994software,
+  title={{Software Aging}},
+  author={Parnas, David Lorge},
+  booktitle={{Proceedings of the 16th International Conference on Software Engineering}},
+  pages={279--287},
+  year={1994},
+  organization={IEEE}
+}
+
+@inproceedings{arafat2009comment,
+  title={{The Comment Density of Open Source Software Code}},
+  author={Arafat, Oliver and Riehle, Dirk},
+  booktitle={{Proceedings of the 31st International Conference on Software Engineering, Companion Volume}},
+  pages={195--198},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{fluri2007code,
+  title={{Do Code and Comments Co-evolve? On the Relation Between Source Code and Comment Changes}},
+  author={Fluri, Beat and Wursch, Michael and Gall, Harald C.},
+  booktitle={{Proceedings of the 14th Working Conference on Reverse Engineering (WCRE 2007)}},
+  pages={70--79},
+  year={2007},
+  organization={IEEE}
+}
+
+@inproceedings{woodfield1981effect,
+  title={{The Effect of Modularization and Comments on Program Comprehension}},
+  author={Woodfield, Scott N. and Dunsmore, Hubert E. and Shen, Vincent Y.},
+  booktitle={{Proceedings of the 5th International Conference on Software Engineering}},
+  pages={215--223},
+  year={1981}
+}
+
+@inproceedings{haouari2011good,
+  title={{How Good Is Your Comment? A Study of Comments in Java Programs}},
+  author={Haouari, Dorsaf and Sahraoui, Houari and Langlais, Philippe},
+  booktitle={{Proceedings of the 2011 International Symposium on Empirical Software Engineering and Measurement}},
+  pages={137--146},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{oman1992metrics,
+  title={{Metrics for Assessing a Software System's Maintainability}},
+  author={Oman, Paul and Hagemeister, Jack},
+  booktitle={{Proceedings of the International Conference on Software Maintenance}},
+  pages={337--338},
+  year={1992},
+  organization={IEEE Computer Society}
+}
+
+@article{pascarella2019classifying,
+  title={{Classifying Code Comments in Java Software Systems}},
+  author={Pascarella, Luca and Bruntink, Magiel and Bacchelli, Alberto},
+  journal={{Empirical Software Engineering}},
+  volume={24},
+  number={3},
+  pages={1499--1537},
+  year={2019},
+  publisher={Springer}
+}
+
+@inproceedings{garcia1996maintainability,
+  title={{Maintainability as a Key Factor in Maintenance Productivity: A Case Study}},
+  author={Barranco Garcia, Manuel J. and Granja Alvarez, Juan Carlos},
+  booktitle={Proceedings of the International Conference on Software Maintenance},
+  pages={87--93},
+  year={1996},
+  organization={IEEE}
+}
