--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -51,6 +51,12 @@
 {\scriptsize Source: \bibentry{garcia1996maintainability}\par}}
 
 \qte
+  [Eriko Nurvitadhi]
+  {eriko-nurvitadhi.jpg}
+  {The results indicated that method comments do increase lowlevel program understanding, while class comments did not increase high-level understanding. This raises questions about the role of class comments in Object-Oriented programs...}
+  {nurvitadhi2003class}
+
+\qte
   [Beat Fluri]
   {beat-fluri.jpg}
   {Code and comments \ul{rarely} co-evolve: despite its growth rate, newly added code barely is commented. Also, 97\% of comment changes are done in the same revision as the associated source code change.}
