--- a/main.bib
+++ b/main.bib
@@ -464,3 +464,13 @@
   year={1996},
   organization={IEEE}
 }
+
+@inproceedings{nurvitadhi2003class,
+  title={{Do Class Comments Aid Java Program Understanding?}},
+  author={Nurvitadhi, Eriko and Leung, Wing Wah and Cook, Curtis},
+  booktitle={{Proceedings of the 33rd Annual Frontiers in Education}},
+  volume={1},
+  pages={T3C--T3C},
+  year={2003},
+  organization={IEEE}
+}
