--- a/main.bib
+++ b/main.bib
@@ -474,3 +474,11 @@
   year={2003},
   organization={IEEE}
 }
+
+@inproceedings{he2019understanding,
+  title={{Understanding Source Code Comments at Large-scale}},
+  author={He, Hao},
+  booktitle={{Proceedings of the 27th ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering}},
+  pages={1217--1219},
+  year={2019}
+}
