--- a/sqm.sty
+++ b/sqm.sty
@@ -72,6 +72,7 @@
 \newcommand\nospell[1]{#1}
 \newcommand\pitch[1]{\plush{\begin{pptMiddle} #1 \end{pptMiddle}}}
 \newcommand\qte[4][]{\pitch{\pptQuote[\scriptsize\scshape\color{gray}{#1}]{#2}{#3}{\color{gray}\rmfamily\scriptsize\bibentry{#4}}}}
+\newcommand\source[1]{\par{\scriptsize Source: \bibentry{#1}\par}}
 
 \AtBeginDocument{%
   \pptLeft{\thetitle{}}%
