--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -107,9 +107,12 @@
 
     \item Function Points
 
-    \item Defects
+    \item Defects Density
+
+    \item Comments Density
 
 {\color{gray}
+    \item Commits
     \item Stars
     \item Contributors
     \item Forks and Pull Requests
