--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -110,6 +110,12 @@
 \includegraphics[width=.9\linewidth]{by-language.png}
 \source{he2019understanding}}
 
+\qte
+  [Xing Hu]
+  {xing-hu.jpg}
+  {Code comment generation is a popular area of research in recent years. In this work, we interviewed 16 professionals and surveyed 720 practitioners on commenting practices and issues they face and their expectations on code comment generation tools. Practitioners are \ul{enthusiastic} about research in \ul{comment generation} techniques and expect tools to generate comments for different granularity levels (especially \ul{class} and \ul{method} levels).}
+  {hu2022practitioners}
+
 \pitch{\pptBanner{Some Open Source Repositories (9 Feb 2024)}
 {\ttfamily\small\begin{tabular}{llrrrr}
 \toprule
