--- a/main.bib
+++ b/main.bib
@@ -482,3 +482,11 @@
   pages={1217--1219},
   year={2019}
 }
+
+@inproceedings{hu2022practitioners,
+  title={{Practitioners' Expectations on Automated Code Comment Generation}},
+  author={Hu, Xing and Xia, Xin and Lo, David and Wan, Zhiyuan and Chen, Qiuyuan and Zimmermann, Thomas},
+  booktitle={{Proceedings of the 44th International Conference on Software Engineering}},
+  pages={1693--1705},
+  year={2022}
+}
