--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -89,6 +89,12 @@
 \source{haouari2011good}}
 
 \qte
+  [Tobias Röhm]
+  {tobias-roehm.jpg}
+  {Source code is \ul{more trusted} than documentation: 21 participants reported that they get their main information from \ul{source code} and \ul{inline comments} whereas only four stated that \ul{documentation} is their main source of information.}
+  {roehm2012professional}
+
+\qte
   [Luca Pascarella]
   {luca-pascarella.jpg}
   {Code comments contain valuable information to support software development, especially during code reading and code maintenance. Nevertheless, not all the comments are the \ul{same}.}
