--- a/main.bib
+++ b/main.bib
@@ -490,3 +490,12 @@
   pages={1693--1705},
   year={2022}
 }
+
+@inproceedings{roehm2012professional,
+  title={{How do professional Developers Comprehend Software?}},
+  author={Roehm, Tobias and Tiarks, Rebecca and Koschke, Rainer and Maalej, Walid},
+  booktitle={{Proceedings of the 34th International Conference on Software Engineering (ICSE)}},
+  pages={255--265},
+  year={2012},
+  organization={IEEE}
+}
