--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -117,6 +117,12 @@
 \source{he2019understanding}}
 
 \qte
+  [Sean Stapleton]
+  {sean-stapleton.jpg}
+  {Participants reviewed Java methods and summaries and answered established program comprehension questions. In addition, participants completed coding tasks given summaries as specifications. We found that participants performed significantly better using \ul{human-written summaries} versus \ul{machine-generated} summaries.}
+  {stapleton2020human}
+
+\qte
   [Xing Hu]
   {xing-hu.jpg}
   {Code comment generation is a popular area of research in recent years. In this work, we interviewed 16 professionals and surveyed 720 practitioners on commenting practices and issues they face and their expectations on code comment generation tools. Practitioners are \ul{enthusiastic} about research in \ul{comment generation} techniques and expect tools to generate comments for different granularity levels (especially \ul{class} and \ul{method} levels).}
