--- a/main.bib
+++ b/main.bib
@@ -499,3 +499,11 @@
   year={2012},
   organization={IEEE}
 }
+
+@inproceedings{stapleton2020human,
+  title={{A Human Study of Comprehension and Code Summarization}},
+  author={Stapleton, Sean and Gambhir, Yashmeet and LeClair, Alexander and Eberhart, Zachary and Weimer, Westley and Leach, Kevin and Huang, Yu},
+  booktitle={{Proceedings of the 28th International Conference on Program Comprehension}},
+  pages={2--13},
+  year={2020}
+}
