--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -28,6 +28,19 @@
 \plush{\sqmTitlePage{19}{}}
 
 \qte
+  [Brian Kernighan]
+  {brian-kernighan.jpg}
+  {The best documentation for a computer program is a \ul{clean structure}. It also helps if the code is well formatted, with good mnemonic identifiers, labels, and a smattering of \ul{enlightening comments}. Flowcharts and program descriptions are of secondary importance; the only reliable documentation of a computer program is the code itself.}
+  {kernighan1974elements}
+
+\pitch{\begin{multicols}{2}
+\includegraphics[width=\linewidth]{bridge.png}
+\par\columnbreak\par
+``Comments which precede a group of statements, and which describe them in terms of operations in another domain, will be particularly helpful. The role of comments is to \ul{bridge} between knowledge domains.''
+\source{brooks1978using}
+\end{multicols}}
+
+\qte
   [Hubert E. Dunsmore]
   {hubert-dunsmore.jpg}
   {An experiment was conducted to investigate how comments are related to programmers' ability to \ul{understand} programs. Those programmers whose programs contained comments were able to \ul{answer} more questions than those without comments.}
@@ -133,7 +146,7 @@
 \toprule
 Github Repository & Stack & Files & Comments & LoC & Com/LoC \\
 \midrule
-\href{https://github.com/nodejs/node}{nodejs} & JS + C++ & 32559 & 1003K & 8381K & 0.12 \\
+\href{https://github.com/nodejs/node}{nodejs} & JS \& C++ & 32559 & 1003K & 8381K & 0.12 \\
 \href{https://github.com/pytorch/pytorch}{pytorch} & Python & 11562 & 414K & 2527K & 0.16 \\
 \href{https://github.com/moby/moby}{moby} (a.k.a. Docker) & Go & 8389 & 272K & 1685K & 0.16 \\
 \href{https://github.com/flutter/flutter}{flutter} & Dart & 5517 & 244K & 1353K & 0.18 \\
