--- a/main.bib
+++ b/main.bib
@@ -507,3 +507,18 @@
   pages={2--13},
   year={2020}
 }
+
+@book{kernighan1974elements,
+  title={{Elements of Programming Style}},
+  author={Kernighan, Brian W. and Plauger, Phillip James},
+  year={1974},
+  publisher={McGraw-Hill, Inc.}
+}
+
+@inproceedings{brooks1978using,
+  title={{Using a Behavioral Theory of Program Comprehension in Software Engineering}},
+  author={Brooks, Ruven},
+  booktitle={{Proceedings of the 3rd International Conference on Software Engineering}},
+  pages={196--201},
+  year={1978}
+}
