--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -141,6 +141,24 @@
   {Code comment generation is a popular area of research in recent years. In this work, we interviewed 16 professionals and surveyed 720 practitioners on commenting practices and issues they face and their expectations on code comment generation tools. Practitioners are \ul{enthusiastic} about research in \ul{comment generation} techniques and expect tools to generate comments for different granularity levels (especially \ul{class} and \ul{method} levels).}
   {hu2022practitioners}
 
+\plush{\pptBanner{Nine Rules of Good Code Comments}
+\begin{multicols}{2}
+\scriptsize\begin{enumerate}\setlength\itemsep{-.1em}
+\item Comments should \ul{not duplicate} the code.
+\item Good comments do not excuse \ul{unclear} code.
+\item If you can't write a \ul{clear} comment, there may be a problem with the code.
+\item Comments should dispel \ul{confusion}, not cause it.
+\item Explain \ul{unidiomatic} code in comments.
+\item Provide links to the original source of \ul{copied} code.
+\item Include \ul{links} to external references where they will be most helpful.
+\item Add comments when \ul{fixing} bugs.
+\item Use comments to mark \ul{incomplete} implementations.
+\end{enumerate}
+\par\columnbreak\par
+\includegraphics[width=.9\linewidth]{joke.png}
+\source{spertus2021}
+\end{multicols}}
+
 \pitch{\pptBanner{Some Open Source Repositories (9 Feb 2024)}
 {\ttfamily\small\begin{tabular}{llrrrr}
 \toprule
