--- a/main.bib
+++ b/main.bib
@@ -522,3 +522,10 @@
   pages={196--201},
   year={1978}
 }
+
+@misc{spertus2021,
+  author={Ellen Spertus},
+  title={{Best practices for writing code comments}},
+  howpublished={\url{https://stackoverflow.blog/2021/12/23/best-practices-for-writing-code-comments/}},
+  year={2021},
+}
