--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -30,7 +30,7 @@
 \qte
   [Brian Kernighan]
   {brian-kernighan.jpg}
-  {The best documentation for a computer program is a \ul{clean structure}. It also helps if the code is well formatted, with good mnemonic identifiers, labels, and a smattering of \ul{enlightening comments}. Flowcharts and program descriptions are of secondary importance; the only reliable documentation of a computer program is the code itself.}
+  {The best documentation for a computer program is a \ul{clean structure}. It also helps if the code is well formatted, with good mnemonic identifiers, labels, and a smattering of \ul{enlightening comments}. Flowcharts and program descriptions are of secondary importance; the only reliable documentation of a computer program is the \ul{code} itself.}
   {kernighan1974elements}
 
 \pitch{\begin{multicols}{2}
@@ -67,6 +67,12 @@
   {eriko-nurvitadhi.jpg}
   {The results indicated that method comments do increase \ul{low-level} program understanding, while class comments did not increase \ul{high-level} understanding. This raises questions about the role of class comments in Object-Oriented programs...}
   {nurvitadhi2003class}
+
+\qte
+  [Steve McConnell]
+  {../06-coupling/steve-mcconnell.jpg}
+  {The main contributor to code-level documentation isn't comments, but good \ul{programming style}... Comments are easier to write poorly than well, and commenting can be more \ul{damaging} than helpful.}
+  {mcconnell2004code}
 
 \qte
   [Beat Fluri]
