--- a/06-coupling/06-coupling.tex
+++ b/06-coupling/06-coupling.tex
@@ -51,7 +51,11 @@
 
 \pitch{\pptQuote{martin-fowler.jpg}{The biggest problems come from uncontrolled coupling at the \ul{upper levels}. I don't worry about the number of modules coupled together, but I look at the pattern of dependency relationship between the modules.}{Martin Fowler, \textit{Reducing Coupling}, IEEE Software, 2001}}
 
-\pitch{\pptQuote{steve-mcconnell.jpg}{Low-to-medium \ul{fan-out} means having a given class use a low-to-medium number of other classes. High fan-out (more than about seven) indicates that a class uses a large number of other classes and may therefore be overly complex. High \ul{fan-in} refers to having a high number of classes that use a given class. High fan-in implies that a system has been designed to make good use of utility classes at the lower levels in the system.}{Steven McConnell, \textit{Code Complete}, 2004}}
+\qte
+  [Steve McConnell]
+  {steve-mcconnell.jpg}
+  {Low-to-medium \ul{fan-out} means having a given class use a low-to-medium number of other classes. High fan-out (more than about seven) indicates that a class uses a large number of other classes and may therefore be overly complex. High \ul{fan-in} refers to having a high number of classes that use a given class. High fan-in implies that a system has been designed to make good use of utility classes at the lower levels in the system.}
+  {mcconnell2004code}
 
 \plush{
 \pptPic{.95}{kokash.png}\par
