--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -64,7 +64,11 @@ Indirectly connected (\(\texttt{NIC}=2\)): \\
 
 \pitch{\pptQuote{paper.png}{If a class is designed in \ul{ad hoc manner} and unrelated components are included in the class, the class represents more than one concept and does not \ul{model an entity}. The cohesion value of such a class is likely to be less than 0.5.}{\ul{James M. Bieman} and Byung-Kyoo Kang, \textit{Cohesion and Reuse in an Object-Oriented System}, Proceedings of the Symposium on Software Reusability (SSR), 1995}}
 
-\pitch{\pptQuote{../06-coupling/steve-mcconnell.jpg}{Cohesion refers to how closely all the routines in a class or all the code in a routine support a \ul{central purpose}---how focused the class is. The ideas of \ul{abstraction} and cohesion are closely related---a class interface that presents a good abstraction usually has strong cohesion.}{Steven McConnell, \textit{Code Complete}, 2004}}
+\qte
+  [Steve McConnell]
+  {../06-coupling/steve-mcconnell.jpg}
+  {Cohesion refers to how closely all the routines in a class or all the code in a routine support a \ul{central purpose}---how focused the class is. The ideas of \ul{abstraction} and cohesion are closely related---a class interface that presents a good abstraction usually has strong cohesion.}
+  {mcconnell2004code}
 
 \pptBanner{Abstraction}
 \begin{multicols}{2}
