--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -108,7 +108,11 @@ duplicated.
 
 \pitch{\pptBanner{Don't Repeat Yourself (DRY)}\pptQuote{andy-hunt.jpg}{Every piece of knowledge must have a \ul{single}, unambiguous, authoritative representation within a system.}{\textit{The Pragmatic Programmer: From Journeyman to Master}, \ul{Andrew Hunt} and David Thomas, Addison-Wesley, 1999}}
 
-\pitch{\pptBanner{The Rule of Three}\pptQuote{kent-beck.jpg}{The \ul{first} time you do something, you just do it. The \ul{second} time you do something similar, you wince at the duplication, but you do the duplicate thing anyway. The \ul{third} time you do something similar, you refactor.}{\textit{Refactoring}, Martin Fowler and \ul{Kent Beck}, Addison-Wesley, 1999}}
+\qte
+  [Kent Beck]
+  {kent-beck.jpg}
+  {\textbf{The Rule of Three}: The \ul{first} time you do something, you just do it. The \ul{second} time you do something similar, you wince at the duplication, but you do the duplicate thing anyway. The \ul{third} time you do something similar, you refactor.}
+  {fowler1999refactoring}
 
 \pitch{\pptBanner{Clone Coverage}\pptQuote{yoshiki-higo.jpg}{Code-clone analysis is a good vehicle to quantitatively understand the differences and improvements between two versions of the same software system}{\textit{Analysis of the linux kernel evolution using code clone coverage}, Simone Livieri, \ul{Yoshiki Higo}, Makoto Matsushita, Katsuro Inoue, International Workshop on Mining Software Repositories (MSR), 2007}}
 
