--- a/main.bib
+++ b/main.bib
@@ -529,3 +529,10 @@
   howpublished={\url{https://stackoverflow.blog/2021/12/23/best-practices-for-writing-code-comments/}},
   year={2021},
 }
+
+@book{fowler1999refactoring,
+  title={{Refactoring: Improving the Design of Existing Code}},
+  author={Fowler, Martin and Beck, Kent and Brant, John and Opdyke, William and Roberts, Don},
+  year={1999},
+  publisher={Addison-Wesley Professional}
+}
