--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -63,6 +63,12 @@
 \source{garcia1996maintainability}}
 
 \qte
+  [Martin Fowler]
+  {../06-coupling/martin-fowler.jpg}
+  {Don't worry, we aren't saying that people shouldn't write comments. In our olfactory analogy, comments aren't a bad smell; indeed they are a \ul{sweet smell}. The reason we mention comments here is that comments often are used as a \ul{deodorant}. It's surprising how often you look at thickly commented code and notice that the comments are there because the code is bad.}
+  {fowler1999refactoring}
+
+\qte
   [Eriko Nurvitadhi]
   {eriko-nurvitadhi.jpg}
   {The results indicated that method comments do increase \ul{low-level} program understanding, while class comments did not increase \ul{high-level} understanding. This raises questions about the role of class comments in Object-Oriented programs...}
