--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -69,6 +69,12 @@
   {fowler1999refactoring}
 
 \qte
+  [Andy Hunt]
+  {../11-clone-coverage/andy-hunt.jpg}
+  {Programmers are taught: good code has \ul{lots of comments}. Unfortunately, they are never taught why code needs comments: bad code requires lots of comments. The DRY principle tells us to keep the low-level knowledge in the code, where it belongs, and reserve the comments for other, \ul{high-level explanations}. Otherwise, we're duplicating knowledge, and every change means changing both the code and the comments. The comments will inevitably become \ul{out of date}, and untrustworthy comments are worse than no comments at all.}
+  {hunt1999pragmatic}
+
+\qte
   [Eriko Nurvitadhi]
   {eriko-nurvitadhi.jpg}
   {The results indicated that method comments do increase \ul{low-level} program understanding, while class comments did not increase \ul{high-level} understanding. This raises questions about the role of class comments in Object-Oriented programs...}
