--- a/main.bib
+++ b/main.bib
@@ -536,3 +536,10 @@
   year={1999},
   publisher={Addison-Wesley Professional}
 }
+
+@book{hunt1999pragmatic,
+  title={The Pragmatic Programmer: From Journeyman to Master},
+  author={Hunt, Andrew and Thomas, Dave},
+  year={1999},
+  publisher={Pearson Education}
+}
