--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -106,7 +106,11 @@ duplicated.
 \end{multicols}
 \plush{}
 
-\pitch{\pptBanner{Don't Repeat Yourself (DRY)}\pptQuote{andy-hunt.jpg}{Every piece of knowledge must have a \ul{single}, unambiguous, authoritative representation within a system.}{\textit{The Pragmatic Programmer: From Journeyman to Master}, \ul{Andrew Hunt} and David Thomas, Addison-Wesley, 1999}}
+\qte
+  [Andy Hunt]
+  {andy-hunt.jpg}
+  {\textbf{Don't Repeat Yourself (DRY)}: Every piece of knowledge must have a \ul{single}, unambiguous, authoritative representation within a system.}
+  {hunt1999pragmatic}
 
 \qte
   [Kent Beck]
