--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -93,6 +93,12 @@
   {fluri2007code}
 
 \qte
+  [Robert C. Martin]
+  {../09-CAMC-and-NHD/robert-martin.jpg}
+  {Indeed, comments are, at best, a \ul{necessary evil}. If our programming languages were expressive enough, or if we had the talent to subtly wield those languages to express our intent, we would not need comments very much---perhaps \ul{not at all}.}
+  {martin2008clean}
+
+\qte
   [Oliver Arafat]
   {oliver-arafat.jpg}
   {Comment density is the percentage of comment lines in a given source code base, that is, comment lines divided by total lines of code. Comment density is assumed to be a good \ul{predictor} of maintainability and hence \ul{survival} of a software project. In this study we focus on one particular code metric, the comment density, and assess it across 5,229 active open source projects, representing about 30\% of all active open source projects.}
