--- a/main.bib
+++ b/main.bib
@@ -543,3 +543,10 @@
   year={1999},
   publisher={Pearson Education}
 }
+
+@book{martin2008clean,
+  title={{Clean Code: A Handbook of Agile Software Craftsmanship}},
+  author={Martin, Robert C.},
+  year={2008},
+  publisher={Pearson Education}
+}
