--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -194,6 +194,7 @@ Github Repository & Stack & Files & Comments & LoC & Com/LoC \\
 \href{https://github.com/flutter/flutter}{flutter} & Dart & 5517 & 244K & 1353K & 0.18 \\
 \href{https://github.com/spring-projects/spring-framework}{spring-framework} & Java & 9883 & 400K & 880K & 0.45 \\
 \href{https://github.com/google/guava}{guava} & Java & 1984 & 131K & 479K & 0.27 \\
+\href{https://github.com/curl/curl}{curl} & C & 2014 & 63K & 314K & 0.20 \\
 \bottomrule
 \end{tabular}}}
 
