--- a/main.bib
+++ b/main.bib
@@ -550,3 +550,45 @@
   year={2008},
   publisher={Pearson Education}
 }
+
+@inproceedings{barnett2016relationship,
+  title={{The Relationship Between Commit Message Detail and Defect Proneness in Java Projects on Github}},
+  author={Barnett, Jacob G. and Gathuru, Charles K. and Soldano, Luke S. and McIntosh, Shane},
+  booktitle={{Proceedings of the 13th International Conference on Mining Software Repositories}},
+  pages={496--499},
+  year={2016}
+}
+
+@inproceedings{moser2008comparative,
+  title={{A Comparative Analysis of the Efficiency of Change Metrics and Static Code Attributes for Defect Prediction}},
+  author={Moser, Raimund and Pedrycz, Witold and Succi, Giancarlo},
+  booktitle={{Proceedings of the 30th international conference on Software engineering}},
+  pages={181--190},
+  year={2008}
+}
+
+@inproceedings{sohn2017fluccs,
+  title={{FLUCCS: Using Code and Change Metrics to Improve Fault Localization}},
+  author={Sohn, Jeongju and Yoo, Shin},
+  booktitle={{Proceedings of the 26th International Symposium on Software Testing and Analysis}},
+  pages={273--283},
+  year={2017}
+}
+
+@inproceedings{hassan2008road,
+  title={{The Road Ahead for Mining Software Repositories}},
+  author={Hassan, Ahmed E.},
+  booktitle={{Frontiers of Software Maintenance}},
+  pages={48--57},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{arafat2009commit,
+  title={{The Commit Size Distribution of Open Source Software}},
+  author={Arafat, Oliver and Riehle, Dirk},
+  booktitle={{Proceedings of the 42nd Hawaii International Conference on System Sciences}},
+  pages={1--8},
+  year={2009},
+  organization={IEEE}
+}
