--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -113,6 +113,8 @@
 
 {\color{gray}
     \item Commits
+    \item CI Failures Rate
+
     \item Stars
     \item Contributors
     \item Forks and Pull Requests
