--- a/main.bib
+++ b/main.bib
@@ -592,3 +592,20 @@
   year={2009},
   organization={IEEE}
 }
+
+@inproceedings{alali2008s,
+  title={{What's a Typical Commit? A Characterization of Open Source Software Repositories}},
+  author={Alali, Abdulkareem and Kagdi, Huzefa and Maletic, Jonathan I.},
+  booktitle={{Proceedings of the 16th International Conference on Program Comprehension}},
+  pages={182--191},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{eyolfson2011time,
+  title={{Do Time of Day and Developer Experience Affect Commit Bugginess?}},
+  author={Eyolfson, Jon and Tan, Lin and Lam, Patrick},
+  booktitle={{Proceedings of the 8th Working Conference on Mining Software Repositories}},
+  pages={153--162},
+  year={2011}
+}
