--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -65,10 +65,38 @@
 \end{multicols}}
 
 \qte
+  [Abdulkareem Alali]
+  {abdulkareem-alali.jpg}
+  {One observation is that the terms that suggest \ul{bug related changes} are associated with fairly small-sized commits.}
+  {alali2008s}
+
+\pitch{\includegraphics[width=.95\linewidth]{size-distribution.png}
+\source{alali2008s}}
+
+\pitch{\begin{multicols}{2}
+\includegraphics[width=.7\linewidth]{terms.png}
+\par\columnbreak\par
+``For each project, we collected the log messages and eliminated stop words using the \nospell{Lovins stemmer} algorithm... The result is a ranked list of frequent terms for each project. Then we cross join those nine lists and take the top most 50 frequent terms.''
+\source{alali2008s}
+\end{multicols}}
+
+\qte
   [Oliver Arafat]
   {../19-comments-density/oliver-arafat.jpg}
-  {We suggest distinguishing commit types by their size, using the following simple heuristic: \ul{single} commits of 1 to 100 SLoC, \ul{aggregate} commits of 101 to 10000 SLoC, and repository \ul{refactorings} of more than 10000 SLoC. }
+  {We suggest distinguishing commit types by their size, using the following simple heuristic: \ul{single} commits of 1 to 100 SLoC, \ul{aggregate} commits of 101 to 10000 SLoC, and repository \ul{refactorings} of more than 10000 SLoC.}
   {arafat2009commit}
+
+\qte
+  [Jon Eyolfson]
+  {jon-eyolfson.jpg}
+  {Commits submitted between midnight and 4~AM (referred to as late-night commits) are significantly buggier and commits between 7~AM and noon are less buggy, implying that developers may want to double-check their own latenight commits.}
+  {eyolfson2011time}
+
+\qte
+  [Shane McIntosh]
+  {shane-mcintosh.jpg}
+  {JIT models, which aim to \ul{predict} the commits that will introduce \ul{future defects}, are typically trained using code-based metrics. We add metrics that estimate the level of detail in commit messages to JIT models with code-based metrics. We find that 43\% and 80\% of the JIT models of the studied systems are significantly improved by adding metrics that measure commit message \ul{volume} and \ul{content}, respectively.}
+  {barnett2016relationship}
 
 \qte
   [Jeongju Sohn]
@@ -76,11 +104,5 @@
   {\ul{Age} simply measures how long a given program element has existed in the code base. We calculate the age of a given \ul{statement} as the number of consecutive versions from the faulty version backwards to the latest version containing a modication to the statement.}
   {sohn2017fluccs}
 
-
-\qte
-  [Shane McIntosh]
-  {shane-mcintosh.jpg}
-  {JIT models, which aim to \ul{predict} the commits that will introduce \ul{future defects}, are typically trained using code-based metrics. We add metrics that estimate the level of detail in commit messages to JIT models with code-based metrics. We find that 43\% and 80\% of the JIT models of the studied systems are significantly improved by adding metrics that measure commit message \ul{volume} and \ul{content}, respectively.}
-  {barnett2016relationship}
 
 \end{document}
