--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -93,6 +93,12 @@
   {eyolfson2011time}
 
 \qte
+  [Robert Dyer]
+  {robert-dyer.jpg}
+  {First, around 14\% of all log messages were completely empty. Second, over two thirds of the messages contained 1–15 words, which is less than the average length of a sentence in English. A normal length sentence in English is 15–20 words (according to various results in Google) and thus we see that very few logs (10\%) contained descriptive messages.}
+  {dyer2013boa}
+
+\qte
   [Shane McIntosh]
   {shane-mcintosh.jpg}
   {JIT models, which aim to \ul{predict} the commits that will introduce \ul{future defects}, are typically trained using code-based metrics. We add metrics that estimate the level of detail in commit messages to JIT models with code-based metrics. We find that 43\% and 80\% of the JIT models of the studied systems are significantly improved by adding metrics that measure commit message \ul{volume} and \ul{content}, respectively.}
@@ -103,6 +109,5 @@
   {jeongju-sohn.jpg}
   {\ul{Age} simply measures how long a given program element has existed in the code base. We calculate the age of a given \ul{statement} as the number of consecutive versions from the faulty version backwards to the latest version containing a modication to the statement.}
   {sohn2017fluccs}
-
 
 \end{document}
