--- a/main.bib
+++ b/main.bib
@@ -609,3 +609,12 @@
   pages={153--162},
   year={2011}
 }
+
+@inproceedings{dyer2013boa,
+  title={{Boa: A Language and Infrastructure for Analyzing Ultra-Large-Scale Software Repositories}},
+  author={Dyer, Robert and Nguyen, Hoan Anh and Rajan, Hridesh and Nguyen, Tien N.},
+  booktitle={2013 35th International Conference on Software Engineering (ICSE)},
+  pages={422--431},
+  year={2013},
+  organization={IEEE}
+}
