--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -99,6 +99,12 @@
   {dyer2013boa}
 
 \qte
+  [Marco D'Ambros]
+  {marco-dambros.jpg}
+  {Developers do not always document all the changes in the commit comment. A common cause is that writing exhaustive comments is \ul{time consuming}, and---being the last step of a coding session---the necessary \ul{time} and \ul{energy} is not always available. Moreover, for commits with many changes, the developers might \ul{not remember} all of the modifications.}
+  {d2010commit}
+
+\qte
   [Shane McIntosh]
   {shane-mcintosh.jpg}
   {JIT models, which aim to \ul{predict} the commits that will introduce \ul{future defects}, are typically trained using code-based metrics. We add metrics that estimate the level of detail in commit messages to JIT models with code-based metrics. We find that 43\% and 80\% of the JIT models of the studied systems are significantly improved by adding metrics that measure commit message \ul{volume} and \ul{content}, respectively.}
