--- a/main.bib
+++ b/main.bib
@@ -618,3 +618,11 @@
   year={2013},
   organization={IEEE}
 }
+
+@inproceedings{d2010commit,
+  title={Commit 2.0},
+  author={{D'Ambros, Marco and Lanza, Michele and Robbes, Romain}},
+  booktitle={{Proceedings of the 1st Workshop on Web 2.0 for Software Engineering}},
+  pages={14--19},
+  year={2010}
+}
