--- a/20-commits/20-commits.tex
+++ b/20-commits/20-commits.tex
@@ -101,7 +101,7 @@
 \qte
   [Robert Dyer]
   {robert-dyer.jpg}
-  {First, around 14\% of all log messages were completely empty. Second, over two thirds of the messages contained 1–15 words, which is less than the average length of a sentence in English. A normal length sentence in English is 15–20 words (according to various results in Google) and thus we see that very few logs (10\%) contained descriptive messages.}
+  {First, around 14\% of all log messages were completely \ul{empty}. Second, over two thirds of the messages contained \ul{1–15 words}, which is less than the average length of a sentence in English. A \ul{normal} length sentence in English is \ul{15–20 words} (according to various results in Google) and thus we see that very few logs (10\%) contained descriptive messages.}
   {dyer2013boa}
 
 \qte
@@ -115,5 +115,13 @@
   {jeongju-sohn.jpg}
   {\ul{Age} simply measures how long a given program element has existed in the code base. We calculate the age of a given \ul{statement} as the number of consecutive versions from the faulty version backwards to the latest version containing a modication to the statement.}
   {sohn2017fluccs}
+
+\qte
+  [Raymond Buse]
+  {raymond-buse.jpg}
+  {We present an automatic technique for synthesizing succinct human-readable documentation for arbitrary program \ul{differences}. We compare our documentation to 250 human-written log messages from 5 popular open source projects. Employing a human study, we find that our generated documentation is \ul{suitable} for supplementing or replacing 89\% of existing log messages that directly describe a code change.}
+  {buse2010automatically}
+
+
 
 \end{document}
