--- a/main.bib
+++ b/main.bib
@@ -626,3 +626,11 @@
   pages={14--19},
   year={2010}
 }
+
+@inproceedings{buse2010automatically,
+  title={{Automatically Documenting Program Changes}},
+  author={Buse, Raymond P. L. and Weimer, Westley R.},
+  booktitle={{Proceedings of the 25th International Conference on Automated Software Engineering}},
+  pages={33--42},
+  year={2010}
+}
